add: two speakers

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -163,7 +163,8 @@
         <!--          <span class="abbr-view">Des Fr</span></a>-->
         <a data-day="js-sat" href="#js-sat" class="btn first-day-btn rounded"><span class="full-view">JS/Frontend</span>
           <span class="abbr-view">10 Aug</span></a>
-        <a data-day="js-sun" href="#js-sun" class="btn second-day-btn rounded"><span class="full-view">JS/Frontend</span>
+        <a data-day="js-sun" href="#js-sun" class="btn second-day-btn rounded"><span
+          class="full-view">JS/Frontend</span>
           <span
             class="abbr-view">11 Aug</span></a>
       </p>
@@ -522,7 +523,7 @@
           </p>
         </li>
 
-        <li>
+        <li class="first-stream">
           <h3><span class="schedule-time">17:50</span><a href="speakers/andrei-lesnitsky.html">One year with Flutter</a>
           </h3>
           <p class="text-sm">Andrei Lesnitsky
@@ -532,8 +533,18 @@
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
+        <li class="second-stream">
+          <h3><span class="schedule-time">17:50</span><a href="speakers/denis-artyuhovich.html">How to set up a pipeline
+            with visual unit tests for your application</a></h3>
+          <p class="text-sm">Denis Artyuhovich
+            <small>| DAZN</small>
+          </p>
+          <p class="text-sm">30min | EN
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
+        <li class="third-stream"></li>
       </ul>
-
 
       <ul class="schedule second-day js-sun">
         <li>
@@ -719,15 +730,27 @@
           <h3><span class="schedule-time">16:50</span> Break | 20min </h3>
         </li>
 
-        <li>
+        <li class="first-stream">
           <h3><span class="schedule-time">17:10</span><a href="speakers/vitaly-friedman.html">Privacy UX</a></h3>
           <p class="text-sm">Vitaly Friedman
             <small>| Smashing Magazine</small>
           </p>
           <p class="text-sm">60min | EN
-            <span class="talk-place">Blue Stage</span>
+            <span class="talk-place">Red Stage</span>
           </p>
         </li>
+        <li class="second-stream">
+          <h3><span class="schedule-time">16:10</span><a href="speakers/venkat-dinavahi.html">Distributed Architectures
+            for Distributed Teams</a></h3>
+          <p class="text-sm">Venkat Dinavahi
+            <small>| Turtle Inc</small>
+          </p>
+          <p class="text-sm">40min | EN
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
+        <li class="third-stream"></li>
+
       </ul>
     </div>
   </section>
@@ -764,7 +787,8 @@
             <h3>"JavaScript / Front-end Weekend" Ticket</h3>
             <p>Access to JavaScript/Front-end streams during the weekend, tightly wrapped by The Rolling Scopes.</p>
             <p class="text-center"><a target="_blank" class="btn"
-                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-javascript-front-end-weekend/">120 BYN</a>
+                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-javascript-front-end-weekend/">120
+              BYN</a>
             </p>
           </div>
         </div>
@@ -780,7 +804,8 @@
               Access to mobile streams, mastered by the MobilePeople community.
             </p>
             <p class="text-center"><a target="_blank" class="btn"
-                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-mobile-friday-ticket/">60 BYN</a>
+                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-mobile-friday-ticket/">60
+              BYN</a>
             </p>
           </div>
         </div>
@@ -795,7 +820,8 @@
             <p>Access to design stream, carefully baked by the DesignSpot community.
             </p>
             <p class="text-center"><a target="_blank" class="btn"
-                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-design-friday-ticket/">60 BYN</a>
+                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-design-friday-ticket/">60
+              BYN</a>
             </p>
           </div>
         </div>
