--- a/app/speakers.html
+++ b/app/speakers.html
@@ -641,6 +641,32 @@
           </figure>
         </li>
 
+        <li>
+          <figure>
+            <img src="images/speakers/venkat-dinavahi.jpg" alt="Venkat Dinavahi photo">
+            <figcaption>
+              <span class="speaker-company">Turtle Inc</span>
+              <h3><a href="speakers/venkat-dinavahi.html">Venkat Dinavahi</a></h3>
+              <p>
+                <small>Berlin, Germany</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/denis-artyuhovich.jpg" alt="Denis Artyuhovich photo">
+            <figcaption>
+              <span class="speaker-company">DAZN</span>
+              <h3><a href="speakers/denis-artyuhovich.html">Denis Artyuhovich</a></h3>
+              <p>
+                <small>London, United Kingdom</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
