upd: speaker list on index page

--- a/app/index.html
+++ b/app/index.html
@@ -270,43 +270,28 @@
       <ul class="speaker-list">
         <li>
           <figure>
-            <img src="images/speakers/andrei-lesnitsky.jpg" alt="Andrei Lesnitsky photo">
-            <figcaption>
-              <span class="speaker-company">Self-employed</span>
-              <h3><a href="speakers/andrei-lesnitsky.html">Andrei Lesnitsky</a></h3>
-              <p>
-                <small>Minsk, Belarus</small>
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-
-        <li>
-          <figure>
-            <img src="images/speakers/irina-levina.jpg" alt="Irina Levina photo">
-            <figcaption>
-              <span class="speaker-company">LeverX Group</span>
-              <h3><a href="speakers/irina-levina.html">Irina Levina</a></h3>
-              <p>
-                <small>Minsk, Belarus</small>
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-
-        <li>
-          <figure>
-            <img src="images/speakers/andre-gloukhmantchouk.jpg" alt="Andre Gloukhmantchouk photo">
+            <img src="images/speakers/martin-splitt.jpg" alt="Martin Splitt photo">
             <figcaption>
               <span class="speaker-company">Google</span>
-              <h3><a href="speakers/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
+              <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
               <p>
-                <small>Los Angeles, United States</small>
+                <small>Zürich, Switzerland</small>
               </p>
             </figcaption>
           </figure>
         </li>
-
+        <li>
+          <figure>
+            <img src="images/speakers/martin-woolley.jpg" alt="Martin Woolley photo">
+            <figcaption>
+              <span class="speaker-company">Bluetooth SIG</span>
+              <h3><a href="speakers/martin-woolley.html">Martin Woolley</a></h3>
+              <p>
+                <small> London, United Kingdom</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
         <li>
           <figure>
             <img src="images/speakers/madlaina-kalunder.jpg" alt="Madlaina Kalunder photo">
@@ -319,54 +304,110 @@
             </figcaption>
           </figure>
         </li>
-
         <li>
           <figure>
-            <img src="images/speakers/alexander-gerasimov.jpg" alt="Alex Gerasimov photo">
+            <img src="images/speakers/vitaly-friedman.jpg" alt="Vitaly Friedman photo">
             <figcaption>
-              <span class="speaker-company">wix.com</span>
-              <h3><a href="speakers/alexander-gerasimov.html">Alex Gerasimov</a></h3>
+              <span class="speaker-company">Smashing Magazine</span>
+              <h3><a href="speakers/vitaly-friedman.html">Vitaly Friedman</a></h3>
               <p>
-                <small> Berlin, Germany</small>
+                <small>Freiburg, Germany</small>
               </p>
             </figcaption>
           </figure>
         </li>
-
         <li>
           <figure>
-            <img src="images/speakers/martin-splitt.jpg" alt="Martin Splitt photo">
+            <img src="images/speakers/shawn-wang.jpg" alt="Shawn Wang photo">
             <figcaption>
-              <span class="speaker-company">Google</span>
-              <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
+              <span class="speaker-company">Netlify</span>
+              <h3><a href="speakers/shawn-wang.html">Shawn Wang</a></h3>
               <p>
-                <small>Zürich, Switzerland</small>
+                <small>New York, United States</small>
               </p>
             </figcaption>
           </figure>
         </li>
-
         <li>
           <figure>
-            <img src="images/speakers/kseniya-koltun.jpg" alt="Kseniya Koltun photo">
+            <img src="images/speakers/milica-mihajlija.jpg" alt="Milica Mihajlija photo">
             <figcaption>
-              <span class="speaker-company">FaceMetrics</span>
-              <h3><a href="speakers/kseniya-koltun.html">Kseniya Koltun</a></h3>
+              <span class="speaker-company">Mozilla TechSpeaker</span>
+              <h3><a href="speakers/milica-mihajlija.html">Milica Mihajlija</a></h3>
+              <p>
+                <small>Belgrade, Serbia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="images/speakers/yonatan-levin.jpg" alt="Yonatan Levin photo">
+            <figcaption>
+              <span class="speaker-company">monday.com</span>
+              <h3><a href="speakers/yonatan-levin.html">Yonatan Levin</a></h3>
+              <p>
+                <small>Tel Aviv, Israel</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="images/speakers/ioana-chiorean.jpg" alt="Ioana Chiorean photo">
+            <figcaption>
+              <span class="speaker-company">Cognizant Softvision / Mozilla</span>
+              <h3><a href="speakers/ioana-chiorean.html">Ioana Chiorean</a></h3>
+              <p>
+                <small>Cluj Napoca, Romania</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="images/speakers/irina-levina.jpg" alt="Irina Levina photo">
+            <figcaption>
+              <span class="speaker-company">LeverX Group</span>
+              <h3><a href="speakers/irina-levina.html">Irina Levina</a></h3>
               <p>
                 <small>Minsk, Belarus</small>
               </p>
             </figcaption>
           </figure>
         </li>
-
         <li>
           <figure>
-            <img src="images/speakers/martin-woolley.jpg" alt="Martin Woolley photo">
+            <img src="images/speakers/richard-westenra.jpg" alt="Richard Westenra photo">
             <figcaption>
-              <span class="speaker-company">Bluetooth SIG</span>
-              <h3><a href="speakers/martin-woolley.html">Martin Woolley</a></h3>
+              <span class="speaker-company">QuantumBlack</span>
+              <h3><a href="speakers/richard-westenra.html">Richard Westenra</a></h3>
               <p>
-                <small> London, United Kingdom</small>
+                <small>London, United Kingdom</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="images/speakers/elaine-dias-batista.jpg" alt="Elaine Dias Batista photo">
+            <figcaption>
+              <span class="speaker-company">SFEIR</span>
+              <h3><a href="speakers/elaine-dias-batista.html">Elaine Dias Batista</a></h3>
+              <p>
+                <small>Paris, France</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="images/speakers/vojtech-miksu.jpg" alt="Vojtech Miksu photo">
+            <figcaption>
+              <span class="speaker-company">Uber</span>
+              <h3><a href="speakers/vojtech-miksu.html">Vojtech Miksu</a></h3>
+              <p>
+                <small>San Francisco, United States</small>
               </p>
             </figcaption>
           </figure>
