--- a/app/partners.html
+++ b/app/partners.html
@@ -225,6 +225,11 @@
       <h2>Info Partners</h2>
       <ul class="partner-list">
         <li>
+          <a target="_blank" href="https:/dev.by">
+            <img src="images/partners/logo-devby.png" alt="DevBy logo"/>
+          </a>
+        </li>
+        <li>
           <a target="_blank" href="https://vk.com/jsmachine">
             <img src="images/partners/logo-jsmachine.png" alt="JS Machine logo"/>
           </a>
