add: anchor to tickets section

--- a/app/index.html
+++ b/app/index.html
@@ -170,7 +170,7 @@
       <!--        Ticket</a></p>-->
     </div>
   </section>
-  <section>
+  <section id="tickets">
     <div class="content-lg">
       <h2>Tickets</h2>
       <div class="ticket-set">
