upd: blinov's talk

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -215,8 +215,7 @@
 
 
         <li class="first-stream">
-          <h3><span class="schedule-time">12:00</span><a href="speakers/alexander-blinov.html"> Я хочу быть
-            архитектором. Работать сутки через трое.</a></h3>
+          <h3><span class="schedule-time">12:00</span><a href="speakers/alexander-blinov.html"> Молчание джунов</a></h3>
           <p class="text-sm">Alexander Blinov
             <small>| Headhunter</small>
           </p>
