--- a/app/index.html
+++ b/app/index.html
@@ -611,8 +611,8 @@
       <h2>Info Partners</h2>
       <ul class="partner-list">
         <li>
-          <a target="_blank" href="https:/dev.by">
-            <img src="images/partners/logo-devby.png" alt="DevBy logo"/>
+          <a target="_blank" href="https://dev.by">
+            <img src="images/partners/dev-logo-bw.png" alt="DevBy logo"/>
           </a>
         </li>
         <li>
