add: two speakers from kaspersky lab

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -213,7 +213,6 @@
           </p>
         </li>
 
-
         <li class="first-stream">
           <h3><span class="schedule-time">12:00</span><a href="speakers/alexander-blinov.html"> Молчание джунов</a></h3>
           <p class="text-sm">Alexander Blinov
@@ -278,6 +277,32 @@
             <small>| EPAM</small>
           </p>
           <p class="text-sm">50min | EN
+            <span class="talk-place">Blue Stage</span>
+          </p>
+        </li>
+
+        <li>
+          <h3><span class="schedule-time">15:50</span> Break | 30min</h3>
+        </li>
+
+        <li class="first-stream">
+          <h3><span class="schedule-time">16:20</span><a href="speakers/alexey-bykov.html">UX как область
+            ответственности мобильного разработчика</a>
+          </h3>
+          <p class="text-sm">Alexey Bykov
+            <small>| KasperskyLab</small>
+          </p>
+          <p class="text-sm">50min | RU
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
+        <li class="second-stream">
+          <h3><span class="schedule-time">16:20</span> <a href="speakers/dmitriy-movchan.html">Автотесты под Android -
+            так ли это просто?</a></h3>
+          <p class="text-sm">Dmitriy Movchan
+            <small>| KasperskyLab</small>
+          </p>
+          <p class="text-sm">50min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
