--- a/app/speakers.html
+++ b/app/speakers.html
@@ -666,6 +666,32 @@
           </figure>
         </li>
 
+        <li>
+          <figure>
+            <img src="images/speakers/alexey-bykov.jpg" alt="Alexey Bykov photo">
+            <figcaption>
+              <span class="speaker-company">KasperskyLab</span>
+              <h3><a href="speakers/alexey-bykov.html">Alexey Bykov</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/dmitriy-movchan.jpg" alt="Dmitriy Movchan photo">
+            <figcaption>
+              <span class="speaker-company">KasperskyLab</span>
+              <h3><a href="speakers/dmitriy-movchan.html">Dmitriy Movchan</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
