upd: mobile page

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -159,8 +159,16 @@
       <h2 class="text-lg">Mobile People Day</h2>
 
       <p class="text-center"><a class="btn margin-bottom-md"
-                                href="https://imaguru.by/product/the-rolling-scopes-conference-2019-mobile-friday-ticket/">Buy a
-        Ticket</a></p>
+                                          href="https://imaguru.by/product/the-rolling-scopes-conference-2019-mobile-friday-ticket/">Buy
+      a
+      Ticket</a>
+
+    </p>
+
+      <p class="text-center">
+
+        <a class="btn" href="schedule.html">See Schedule</a>
+      </p>
     </div>
   </section>
 
@@ -168,6 +176,7 @@
   <section>
     <div class="content-lg">
       <h2>Speakers</h2>
+
       <ul class="speaker-list">
         <li>
           <figure>
@@ -269,7 +278,34 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/alexey-bykov.jpg" alt="Alexey Bykov photo">
+            <figcaption>
+              <span class="speaker-company">KasperskyLab</span>
+              <h3><a href="speakers/alexey-bykov.html">Alexey Bykov</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/dmitriy-movchan.jpg" alt="Dmitriy Movchan photo">
+            <figcaption>
+              <span class="speaker-company">KasperskyLab</span>
+              <h3><a href="speakers/dmitriy-movchan.html">Dmitriy Movchan</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
+
     </div>
   </section>
 
