add: intro about d.movchan; test menu item about mobile people

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>RS Conf 2019 | Mobile Day</title>
+  <title>RS Conf 2019 | Mobile People Day</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -87,7 +87,7 @@
 
         <div class="menu-item-about">
           <h2><a href="about.html">About</a></h2>
-          <p>The Rolling Scopes is a front-end conference, located in Minsk, Belarus.</p>
+          <p>The biggest conference in Belarus backed by The Rolling Scopes developer community since 2015.</p>
           <p><a href="about.html">Read more</a></p>
         </div>
 
@@ -103,6 +103,17 @@
             <li><a href="https://2018.conf.rollingscopes.com/">2018 </a>
             </li>
           </ul>
+        </div>
+
+        <div class="menu-item-mpday">
+          <h2><a href="mobile.html">Mobile People Day</a></h2>
+          <img
+            src="images/partners/logo-mobilepeople.png" alt="mobilepeople logo"/>
+          <p>
+            Mobile streams mastered by the "Mobile People" community. <br> <a href="mobile.html"> Find out
+            more </a>
+
+          </p>
         </div>
 
         <div class="menu-item-venue">
@@ -153,26 +164,18 @@
 
 
   <section>
-    <div class="content-md">
+    <div class="content-md announcement">
       <h3>9 AUG 2019 </h3>
-
       <h2 class="text-lg">Mobile People Day</h2>
-
-      <p class="text-center"><a class="btn margin-bottom-md"
-                                          href="https://imaguru.by/product/the-rolling-scopes-conference-2019-mobile-friday-ticket/">Buy
-      a
-      Ticket</a>
-
-    </p>
-
       <p class="text-center">
-
         <a class="btn" href="schedule.html">See Schedule</a>
+        <a class="btn"
+           href="https://imaguru.by/product/the-rolling-scopes-conference-2019-mobile-friday-ticket/">Buy
+          a
+          Ticket</a>
       </p>
     </div>
   </section>
-
-
   <section>
     <div class="content-lg">
       <h2>Speakers</h2>
@@ -406,6 +409,11 @@
       </ul>
       <h2>Info Partners</h2>
       <ul class="partner-list">
+        <li>
+          <a target="_blank" href="https://dev.by">
+            <img src="images/partners/dev-logo-bw.png" alt="DevBy logo"/>
+          </a>
+        </li>
         <li>
           <a target="_blank" href="https://vk.com/jsmachine">
             <img src="images/partners/logo-jsmachine.png" alt="JS Machine logo"/>
