upd: menu on mobile people page

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -118,8 +118,8 @@
 
         <div class="menu-item-venue">
           <h2><a href="venue.html">Venue</a></h2>
-          <img src="images/ok16-logo.png" alt="ok16 logo">
-          <h3>ОК16 CULTURAL HUB</h3>
+<!--          <img src="images/ok16-logo.png" alt="ok16 logo">-->
+          <h3>ОК16 Cultural Hub</h3>
           <p>vulica Kastryčnickaja 16, Minsk</p>
           <p><a href="venue.html">Learn more</a></p>
         </div>
@@ -135,9 +135,9 @@
           <!--<p class="placeholder-btn"> Not on sale yet</p>-->
 
 
-          <p>Follow us on <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a> or
-            <a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
-            to learn about the tickets first!</p>
+<!--          <p>Follow us on <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a> or-->
+<!--            <a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>-->
+<!--            to learn about the tickets first!</p>-->
         </div>
 
         <div class="menu-item-social">
