upd: nav on all pages

--- a/app/contacts.html
+++ b/app/contacts.html
@@ -45,47 +45,31 @@
   <![endif]-->
 
   <nav>
-
     <input class="menu-btn" type="checkbox"/>
-
     <div class="menu-icon">
-
       <span>hamburger menu line</span>
       <span>hamburger menu line</span>
       <span>hamburger menu line</span>
-
     </div>
-
     <div class="menu-wrapper">
-
       <div class="menu-content">
-
         <div class="menu-item-primary">
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="speakers.html">Speakers</a></li>
-            <li><a target="_blank" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></li>
+            <li><a href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></li>
             <li><a href="venue.html">Venue</a></li>
             <li><a href="partners.html">Partners</a></li>
             <li><a href="contacts.html">Contacts</a></li>
             <li><a href="code-of-conduct.html">Code of Conduct</a></li>
           </ul>
         </div>
-
-        <!--<div class="menu-item-lang">-->
-        <!--<ul>-->
-        <!--<li><a class="active" href="https://2018.conf.rollingscopes.com/">En</a></li>-->
-        <!--<li><a href="#">Ru</a></li>-->
-        <!--</ul>-->
-        <!--</div>-->
-
         <div class="menu-item-about">
           <h2><a href="about.html">About</a></h2>
-          <p>The Rolling Scopes is a front-end conference, located in Minsk, Belarus.</p>
+          <p>The biggest conference in Belarus backed by The Rolling Scopes developer community since 2015.</p>
           <p><a href="about.html">Read more</a></p>
         </div>
-
         <div class="menu-item-previous">
           <h2>Previous years</h2>
           <ul class="preview-slider">
@@ -99,38 +83,38 @@
             </li>
           </ul>
         </div>
-
+        <div class="menu-item-mpday">
+          <h2><a href="mobile.html">Mobile People Day</a></h2>
+          <img src="images/partners/logo-mobilepeople.png" alt="mobilepeople logo"/>
+          <p>
+            Mobile streams mastered by the "Mobile People" community. <br> <a href="mobile.html"> Find out
+            more </a>
+          </p>
+        </div>
         <div class="menu-item-venue">
           <h2><a href="venue.html">Venue</a></h2>
-          <img src="images/ok16-logo.png" alt="ok16 logo">
-          <h3>ОК16 CULTURAL HUB</h3>
+          <h3>ОК16 Cultural Hub</h3>
           <p>vulica Kastryčnickaja 16, Minsk</p>
           <p><a href="venue.html">Learn more</a></p>
         </div>
-
         <div class="menu-item-tickets">
           <h2><a href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></h2>
           <p class="bold">The Rolling Scopes Conference
             August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
-
-          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a Ticket</a></p>
-          <!--<p class="placeholder-btn"> Not on sale yet</p>-->
-
-          <p>Follow us on <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a> or
-            <a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
-            to learn about the tickets first!</p>
+          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a
+            Ticket</a></p>
         </div>
-
         <div class="menu-item-social">
           <h2>Follow us</h2>
           <p>Follow us on social media, our hashtag #rollingscopes</p>
           <ul class="social-links">
-            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a></li>
+            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a>
+            </li>
             <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
               class="fab fa-facebook-f"></i></a></li>
             <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
-                                                                                            ></i></a>
+            ></i></a>
             </li>
             <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
             <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
@@ -141,7 +125,6 @@
         </div>
       </div>
     </div>
-
   </nav>
 
   <section>
