--- a/app/mobile.html
+++ b/app/mobile.html
@@ -50,21 +50,14 @@
   <![endif]-->
 
   <nav>
-
     <input class="menu-btn" type="checkbox"/>
-
     <div class="menu-icon">
-
       <span>hamburger menu line</span>
       <span>hamburger menu line</span>
       <span>hamburger menu line</span>
-
     </div>
-
     <div class="menu-wrapper">
-
       <div class="menu-content">
-
         <div class="menu-item-primary">
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -77,20 +70,11 @@
             <li><a href="code-of-conduct.html">Code of Conduct</a></li>
           </ul>
         </div>
-
-        <!--<div class="menu-item-lang">-->
-        <!--<ul>-->
-        <!--<li><a class="active" href="https://2018.conf.rollingscopes.com/">En</a></li>-->
-        <!--<li><a href="#">Ru</a></li>-->
-        <!--</ul>-->
-        <!--</div>-->
-
         <div class="menu-item-about">
           <h2><a href="about.html">About</a></h2>
           <p>The biggest conference in Belarus backed by The Rolling Scopes developer community since 2015.</p>
           <p><a href="about.html">Read more</a></p>
         </div>
-
         <div class="menu-item-previous">
           <h2>Previous years</h2>
           <ul class="preview-slider">
@@ -104,42 +88,28 @@
             </li>
           </ul>
         </div>
-
         <div class="menu-item-mpday">
           <h2><a href="mobile.html">Mobile People Day</a></h2>
-          <img
-            src="images/partners/logo-mobilepeople.png" alt="mobilepeople logo"/>
+          <img src="images/partners/logo-mobilepeople.png" alt="mobilepeople logo"/>
           <p>
             Mobile streams mastered by the "Mobile People" community. <br> <a href="mobile.html"> Find out
             more </a>
-
           </p>
         </div>
-
         <div class="menu-item-venue">
           <h2><a href="venue.html">Venue</a></h2>
-<!--          <img src="images/ok16-logo.png" alt="ok16 logo">-->
           <h3>ОК16 Cultural Hub</h3>
           <p>vulica Kastryčnickaja 16, Minsk</p>
           <p><a href="venue.html">Learn more</a></p>
         </div>
-
         <div class="menu-item-tickets">
           <h2><a href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></h2>
           <p class="bold">The Rolling Scopes Conference
             August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
-
           <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a
             Ticket</a></p>
-          <!--<p class="placeholder-btn"> Not on sale yet</p>-->
-
-
-<!--          <p>Follow us on <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a> or-->
-<!--            <a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>-->
-<!--            to learn about the tickets first!</p>-->
         </div>
-
         <div class="menu-item-social">
           <h2>Follow us</h2>
           <p>Follow us on social media, our hashtag #rollingscopes</p>
@@ -161,7 +131,6 @@
       </div>
     </div>
   </nav>
-
 
   <section>
     <div class="content-md announcement">
