add: max nikulin; upd: nav on speakers' page

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -276,6 +276,19 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/max-nikulin.jpg" alt="Max Nikulin photo">
+            <figcaption>
+              <span class="speaker-company">Movavi</span>
+              <h3><a href="speakers/max-nikulin.html">Max Nikulin</a></h3>
+              <p>
+                <small>Novosibirsk, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
 
     </div>
