--- a/app/schedule.html
+++ b/app/schedule.html
@@ -287,6 +287,27 @@
           </p>
         </li>
 
+        <li class="first-stream">
+          <h3><span class="schedule-time">17:20</span>
+          </h3>
+          <!--          <p class="text-sm">-->
+          <!--            <small>| KasperskyLab</small>-->
+          <!--          </p>-->
+          <p class="text-sm">50min | RU
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
+        <li class="second-stream">
+          <h3><span class="schedule-time">17:20</span> <a href="speakers/max-nikulin.html">Строим видеоредактор для
+            iOS</a></h3>
+          <p class="text-sm">Max Nikulin
+            <small>| Movavi</small>
+          </p>
+          <p class="text-sm">50min | RU
+            <span class="talk-place">Blue Stage</span>
+          </p>
+        </li>
+
 
       </ul>
 
