upd: korotaev's talk

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -735,8 +735,9 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">16:10</span><a href="speakers/#">WebGL и 2D: простой как Web</a></h3>
-          <p class="text-sm">Александр Коротаев
+          <h3><span class="schedule-time">16:10</span><a href="speakers/alexander-korotaev.html">Теплый ламповый геймдев
+            на React и WebGL</a></h3>
+          <p class="text-sm">Alexander Korotaev
             <small>| Tinkoff</small>
           </p>
           <p class="text-sm">40min | RU
