--- a/app/speakers.html
+++ b/app/speakers.html
@@ -682,6 +682,19 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/alexander-korotaev.jpg" alt="Alexander Korotaev photo">
+            <figcaption>
+              <span class="speaker-company">Tinkoff</span>
+              <h3><a href="speakers/alexander-korotaev.html">Alexander Korotaev</a></h3>
+              <p>
+                <small>Saint-Petersburg, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
