add: dazn to travel partners

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -384,6 +384,11 @@
           </a>
         </li>
         <li>
+          <a target="_blank" href="https://www.dazn.com/">
+            <img src="images/partners/logo-DAZN.svg" alt="DAZN logo">
+          </a>
+        </li>
+        <li>
           <a target="_blank" href="https://www.mozilla.org">
             <img src="images/partners/logo-mozilla.svg" alt="mozilla logo">
           </a>
