add: jetbrains to partner

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -18,11 +18,11 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RS Conf 2019 | Mobile People Day</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#603cba">
   <meta name="theme-color" content="#ffffff">
   <!-- Place favicon.ico in the root directory -->
@@ -391,6 +391,11 @@
         <li>
           <a target="_blank" href="https://www.mozilla.org">
             <img src="images/partners/logo-mozilla.svg" alt="mozilla logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.jetbrains.com/">
+            <img src="images/partners/logo-jetbrains-2.svg" alt="jetbrains logo">
           </a>
         </li>
       </ul>
