--- a/app/partners.html
+++ b/app/partners.html
@@ -205,6 +205,11 @@
             <img src="images/partners/logo-mozilla.svg" alt="mozilla logo">
           </a>
         </li>
+        <li>
+          <a target="_blank" href="https://www.jetbrains.com/">
+            <img src="images/partners/logo-jetbrains-2.svg" alt="jetbrains logo">
+          </a>
+        </li>
       </ul>
 
       <h2>Info Partners</h2>
