add: 2 speakers to mobile day

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -252,11 +252,13 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">15:00</span> TBD</h3>
-          <p class="text-sm">Данис Тазединов
+          <h3><span class="schedule-time">15:00</span>
+            <a href="speakers/danis-tazetdinov.html">Augmenting Reality</a>
+          </h3>
+          <p class="text-sm">Danis Tazetdinov
             <small>| EPAM</small>
           </p>
-          <p class="text-sm">50min | EN
+          <p class="text-sm">50min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
@@ -288,12 +290,13 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">17:20</span>
+          <h3><span class="schedule-time">17:20</span> <a href="speakers/mateusz-szklarek.html">MVVM as good
+            (anti)pattern in iOS</a>
           </h3>
-          <!--          <p class="text-sm">-->
-          <!--            <small>| KasperskyLab</small>-->
-          <!--          </p>-->
-          <p class="text-sm">50min | RU
+          <p class="text-sm">Mateusz Szklarek
+            <small>| EL Passion</small>
+          </p>
+          <p class="text-sm">50min | EN
             <span class="talk-place">Green Stage</span>
           </p>
         </li>
