--- a/app/mobile.html
+++ b/app/mobile.html
@@ -289,6 +289,30 @@
             </figcaption>
           </figure>
         </li>
+        <li>
+          <figure>
+            <img src="images/speakers/mateusz-szklarek.jpg" alt="Mateusz Szklarek photo">
+            <figcaption>
+              <span class="speaker-company">EL Passion</span>
+              <h3><a href="speakers/mateusz-szklarek.html">Mateusz Szklarek</a></h3>
+              <p>
+                <small>Warsaw, Poland</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="images/speakers/danis-tazetdinov.jpg" alt="Danis Tazetdinov photo">
+            <figcaption>
+              <span class="speaker-company">EPAM Systems</span>
+              <h3><a href="speakers/danis-tazetdinov.html">Danis Tazetdinov</a></h3>
+              <p>
+                <small>Nizhny Novgogord, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
 
     </div>
